# toto-app

./: .gitignore  constants.py  database.py  domain_models.py  main.py  pyproject.toml
frontend/: openapi-generator-config.json  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: .openapi-generator-ignore  README.md  api.ts  base.ts  common.ts  configuration.ts  index.ts  useApi.ts
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/docs/: Book.md  CommentCreate.md  DefaultApi.md  HTTPValidationError.md  User.md  UserCreate.md  UserLogin.md  ValidationError.md  ValidationErrorLocInner.md
frontend/src/components/: Navigation.tsx
frontend/src/design-system/: Button.tsx
frontend/src/pages/: About.tsx  BookDetail.tsx  Home.tsx  Login.tsx  Register.tsx
